2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>

	* lib/dpkg-db.h (modstatdb_note_ifwrite): New prototype.
	* ib/dbmodify.c (modstatdb_note_ifwrite): New function.

2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>

	* src/archives.c (archivefiles): Call log_message.
	* src/configure.c (deferred_configure): Likewise.
	* src/packages.c (packages): Likewise.
	* src/processarc.c (process_archive): Call log_action after printing
	the action to perform to stdout.
	* src/help.c (log_action): Call statusfd_send.

2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>,
            Guillem Jover  <guillem@debian.org>

	* lib/dbmodify.c (status_pipes): Move definitions to ...
	* lib/log.c: ... here.
	* lib/dpkg-db.h (struct pipef, status_pipes): Move declarations to ...
	* lib/dpkg.h: ... here.
	(statusfd_send): New function protoype.
	* lib/log.c: Include <assert.h> and <unistd.h>.
	(statusfd_send): New function.
	* lib/dbmodify.c: Use statusfd_send instead of duplicate code.
	* src/configure.c: Likewise.
	* src/errors.c: Likewise.

2008-03-25  Guillem Jover  <guillem@debian.org>

	* lib/dbmodify.c (log_file, log_message): Move to ...
	* lib/log.c: ... here. New file.
	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'log.c'.
	* lib/dpkg-db.h (log_file, log_message): Move declaration to ...
	* lib/dpkg.h: ... here.

2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>,
            Guillem Jover  <guillem@debian.org>

	* src/packages.c (struct pkginqueue): Move declaration to ...
	* src/main.h: ... here.
	(queuelen): Remove extern declaration.
	(struct pkgqueue): New declaration.
	(PKGQUEUE_DEF_INIT): New macro.
	(add_to_some_queue): New function prototype.
	(remove_from_some_queue): Likewise.
	* src/packages.c (queuehead, queuetail, queuelen): Replace with ...
	(queue): ... this. New variable. Fix all users.
	(add_to_queue): Refactor into ...
	(add_to_some_queue): ... this. Take a struct pkgqueue argument.