@@ -1,4 +1,4 @@
-.TH dpkg\-shlibdeps 1 "2007-07-16" "Debian Project" "dpkg utilities"
+.TH dpkg\-shlibdeps 1 "2008-03-25" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-shlibdeps \- generate shared library substvar dependencies
 .
@@ -199,6 +199,17 @@ Usage of this option is discouraged, all libraries should provide
 dependency information (either with shlibs files, or with symbols files)
 even if they are not yet used by other packages.  
 .TP
+.BI \-\-warnings= value
+\fIvalue\fP is a bit field defining the set of warnings that
+can be emitted by \fBdpkg-\-shlibdeps\fP.
+Bit 0 (value=1) enables the warning "symbol \fIsym\fP used by \fIbinary\fP
+found in none of the libraries", bit 1 (value=2) enables the warning
+"dependency on \fIlibrary\fP could be avoided" and bit 2 (value=4)
+enables the warning "\fIbinary\fP shouldn't be linked with \fIlibrary\fP".
+The default \fIvalue\fP is 3: the first two warnings are active by
+default, the last one is not. Set \fIvalue\fP to 7 if you want all
+warnings to be active.
+.TP
 .BI \-\-admindir= dir
 Change the location of the \fBdpkg\fR database. The default location is
 \fI/var/lib/dpkg\fP.
@@ -224,18 +235,18 @@ binary. The \fIbinary\fR is most likely a library and it needs to be linked
 with an additional library during the build process (option \fB-l\fR\fIlibrary\fR
 of the linker).
 .TP
+.BI "dependency on " library " could be avoided if " binaries " were not uselessly linked against it (they use none of its symbols)."
+None of the \fIbinaries\fP that are linked with \fPlibrary\fP use any of the
+symbols provided by the library. By fixing all the binaries, you would avoid
+the dependency associated to this library (unless the same dependency is
+also generated by another library that is really used).
+.TP
 .IB binary " shouldn't be linked with " library " (it uses none of its symbols)."
 The \fIbinary\fR is linked to a library that it doesn't need. It's not a
-problem but some small performance improvements in binary load time
-can be obtained by not linking this library to this binary. 
-
-Furthermore, in some cases, this will lead to a non-versioned dependency
-on the library that could have been avoided if the binary was only linked
-against libraries that it really uses. The exception to this rule is
-when several binaries are linked against the same set of libraries but
-each binary only uses a subset of those. You will have warnings on
-individual binaries, but the set of libraries needed at the package level
-is the same whether you fix the binaries or not.
+problem but some small performance improvements in binary load time can be
+obtained by not linking this library to this binary. This warning checks
+the same information than the previous one but does it for each binary
+instead of doing the check globally on all binaries analyzed.
 .SH ERRORS
 .B dpkg\-shlibdeps
 will fail if it can't find a public library used by a binary or if this
@@ -310,7 +321,7 @@ Copyright (C) 2000 Wichert Akkerman
 .br
 Copyright (C) 2006 Frank Lichtenheld
 .br
-Copyright (C) 2007 Rapha\[:e]l Hertzog
+Copyright (C) 2007-2008 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
