@@ -1,3 +1,11 @@
+2008-03-25  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-shlibdeps.pl: Let the user configure the set of
+	warnings that he wants. Add a new warning for useless libraries
+	on all binaries analyzed. Disable by default the warning that
+	does the same but individually, for each binary analyzed.
+	* man/dpkg-shlibdeps.1: Update manual page accordingly.
+
 2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>
 
 	* lib/dpkg-db.h (modstatdb_note_ifwrite): New prototype.
